//plugins {
//    id 'ru.vyarus.use-python' version '3.0.0'
//}
apply plugin: 'application'
apply plugin: 'java'
/*
//pip3 install torch torchvision torchaudio --extra-index-url https://download.pytorch.org/whl/cu116
python {
    extraIndexUrls "https://download.pytorch.org/whl/cu116"
    pip 'transformers'
    pip 'torch'
    pip 'torchvision'
    pip 'torchaudio'
    pip 'petals'
}
 */

compileJava {
//    options.fork = true
//    options.forkOptions.executable = "javac"
//    options.forkOptions.javaHome = file(System.getProperty("java.home"))
//    options.compilerArgs.addAll('-XDignore.symbol.file','--add-exports=java.base/jdk.internal=ALL-UNNAMED','--add-exports=java.base/jdk.internal.vm.annotation=ALL-UNNAMED')
    sourceCompatibility = '13'
    targetCompatibility = '13'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation group: 'ai.djl.huggingface', name: 'tokenizers', version: '0.20.0'
    implementation "org.apache.logging.log4j:log4j-slf4j-impl:2.17.1"
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.0'
    implementation platform("ai.djl:bom:0.16.0")
    implementation "ai.djl:api"
    runtimeOnly "ai.djl.pytorch:pytorch-engine"
    runtimeOnly "ai.djl.pytorch:pytorch-model-zoo"
    implementation group: 'org.javassist', name: 'javassist', version: '3.29.2-GA'
    implementation group: 'com.intellij', name: 'forms_rt', version: '6.0.5'
}

application {
    mainClass = 'com.klemstinegroup.AiCoder'
}

run {
    jvmArgs =['-Djdk.attach.allowAttachSelf=true']
}

sourceSets {
    api
    impl
    main{
        java {
            srcDir 'src'
        }
    }
    test {
        java {
            srcDir 'src'
        }
    }
}

tasks.named('test') {
    useJUnitPlatform()
}